Fixed cmake script and included raptor build script

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -870,12 +870,12 @@ find_file(MSVC_MSVCP_WIN_DLL NAMES msvcp_win.dll PATHS ${WINDIR}/System32)
 find_file(MSVC_MSVCRT_DLL NAMES msvcrt.dll PATHS ${WINDIR}/System32)
 
 set(WINDOWS_RUNTIME_DLLS
-	${MSCV_VCOMP_DLL}
-	${MSCV_VCRUNTIME_DLL}
-	${MSCV_VCCORLIB_DLL}
-	${MSCV_MSVCP_DLL}
-	${MSCV_MSVCP_WIN_DLL}
-	${MSCV_MSVCRT_DLL}
+	${MSVC_VCOMP_DLL}
+	${MSVC_VCRUNTIME_DLL}
+	${MSVC_VCCORLIB_DLL}
+	${MSVC_MSVCP_DLL}
+	${MSVC_MSVCP_WIN_DLL}
+	${MSVC_MSVCRT_DLL}
 )
 
 macro(installData DATA)
