Added dummy okstra owl syntax

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -665,6 +665,9 @@ add_custom_target(CopyOpenInfraPlatformUIResources
 	
 	COMMAND	${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/deploy/InstanceLevelTranslator/InstanceLevelTranslator.exe		${CMAKE_BINARY_DIR}/RelWithDebInfo/InstanceLevelTranslator.exe
 	COMMAND	${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/deploy/InstanceLevelTranslator/OkstraI18NTranslation.dll		${CMAKE_BINARY_DIR}/RelWithDebInfo/OkstraI18NTranslation.dll
+	
+	# OKSTRA OWL
+	COMMAND	${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/Data/okstra							${CMAKE_BINARY_DIR}/Data
 )
 
 # DirectX
