--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -664,6 +664,7 @@ add_custom_target(CopyOpenInfraPlatformUIResources
 	
 	# OKSTRA OWL
 	COMMAND	${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/Data/okstra							${CMAKE_BINARY_DIR}/Data
+	COMMAND	${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/Data/IFC4x1.ttl						${CMAKE_BINARY_DIR}/Data
 )
 
 # DirectX
