Started to implement copyright and license dialog.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -499,6 +499,7 @@ set(OpenInfraPlatform_UIS
 	src/OpenInfraPlatform/Forms/PreferencesDialog.ui
 	src/OpenInfraPlatform/Forms/VerticalAlignmentWindow.ui
 	src/OpenInfraPlatform/Forms/XYZImportDialog.ui
+	src/OpenInfraPlatform/Forms/LicenseAndCopyrightInformation.ui
 )
 
 source_group(OpenInfraPlatform\\UserInterface\\Forms					FILES ${OpenInfraPlatform_UIS})
