Added support for Qt 5.10.1. QNativeWifiEnginePlugin seems not to exist anymore.

--- a/external/QtXlsxWriter/CMakeLists.txt
+++ b/external/QtXlsxWriter/CMakeLists.txt
@@ -58,6 +58,9 @@ include_directories(
 	# Support for Qt 5.10.0
     ${Qt5Gui_DIR}/../../../include/QtGui/5.10.0
     ${Qt5Core_DIR}/../../../include/QtCore/5.10.0
+	# Support for Qt 5.10.1
+    ${Qt5Gui_DIR}/../../../include/QtGui/5.10.1
+    ${Qt5Core_DIR}/../../../include/QtCore/5.10.1
 )
 
 ADD_LIBRARY(QtXlsxWriter SHARED
