--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,7 +84,8 @@ if(OIP_USE_PREDEFINED_THIRDPARTY_PATH)
 			  "C:\\Qt\\5.9.2\\msvc${MSVC_VERSION_YEAR}_64"
 			  "C:\\Qt\\Qt5.9.3\\5.9.3\\msvc${MSVC_VERSION_YEAR}_64"
 			  "C:\\Qt\\Qt5.10.0\\5.10.0\\msvc${MSVC_VERSION_YEAR}_64"
-			  "C:\\Qt\\5.10.0\\msvc${MSVC_VERSION_YEAR}_64")
+			  "C:\\Qt\\5.10.0\\msvc${MSVC_VERSION_YEAR}_64"
+			  "C:\\Qt\\5.10.1\\msvc${MSVC_VERSION_YEAR}_64")
 	find_path(GTEST_ROOT NAMES googletest/include/gtest/gtest.h HINTS 
 		      "C:\\thirdparty\\${MSVC_VERSION_STRING}\\x64\\googletest-release-1.8.0" 
 		      "C:\\thirdparty\\${MSVC_VERSION_STRING}\\x64\\googletest-1.8.0")
@@ -202,7 +203,7 @@ set(Qt5_PLATFORMS_PLUGINS
 )
 
 set(Qt5_NETWORK_PLUGINS
-	QNativeWifiEnginePlugin
+	#QNativeWifiEnginePlugin
 	QGenericEnginePlugin
 )
 
