--- a/Infrastructure/CMakeLists.txt
+++ b/Infrastructure/CMakeLists.txt
@@ -40,6 +40,7 @@ file(GLOB OpenInfraPlatform_Infrastructure_SectionedSolid_Source 					src/OpenIn
 file(GLOB OpenInfraPlatform_Infrastructure_Girder_Source 							src/OpenInfraPlatform/Infrastructure/Girder/*.*)
 file(GLOB OpenInfraPlatform_Infrastructure_SlabField_Source 						src/OpenInfraPlatform/Infrastructure/SlabField/*.*)
 file(GLOB OpenInfraPlatform_Infrastructure_Tessellation_Source 						src/OpenInfraPlatform/Infrastructure/Tessellation/*.*)
+file(GLOB OpenInfraPlatform_Infrastructure_ProxyModel_Source 				        src/OpenInfraPlatform/Infrastructure/ProxyModel/*.*)	
 file(GLOB OpenInfraPlatform_Infrastructure_EnergyConsumption_Source 				src/OpenInfraPlatform/Infrastructure/EnergyConsumption/*.*)						
 file(GLOB OpenInfraPlatform_Infrastructure_EnergyConsumption_Calculators_Source 	src/OpenInfraPlatform/Infrastructure/EnergyConsumption/Calculators/*.*)	
 file(GLOB OpenInfraPlatform_Infrastructure_EnergyConsumption_Calculators_Parameters_Source 	src/OpenInfraPlatform/Infrastructure/EnergyConsumption/Calculators/Parameters/*.*)	
@@ -58,6 +59,7 @@ source_group(OpenInfraPlatform\\Infrastructure\\Bindings							FILES ${OpenInfra
 source_group(OpenInfraPlatform\\Infrastructure\\Core								FILES ${OpenInfraPlatform_Infrastructure_Core_Source})		
 source_group(OpenInfraPlatform\\Infrastructure\\CrossSection						FILES ${OpenInfraPlatform_Infrastructure_CrossSection_Source})				
 source_group(OpenInfraPlatform\\Infrastructure\\DigitalElevationModel  				FILES ${OpenInfraPlatform_Infrastructure_DigitalElevationModel_Source})						
+source_group(OpenInfraPlatform\\Infrastructure\\ProxyModel 				            FILES ${OpenInfraPlatform_Infrastructure_ProxyModel_Source})
 source_group(OpenInfraPlatform\\Infrastructure\\SectionedSolid						FILES ${OpenInfraPlatform_Infrastructure_SectionedSolid_Source})
 source_group(OpenInfraPlatform\\Infrastructure\\Girder  							FILES ${OpenInfraPlatform_Infrastructure_Girder_Source})
 source_group(OpenInfraPlatform\\Infrastructure\\SlabField  							FILES ${OpenInfraPlatform_Infrastructure_SlabField_Source})
@@ -95,6 +97,7 @@ add_library(OpenInfraPlatform.Infrastructure SHARED
 	${OpenInfraPlatform_Infrastructure_Core_Source}
 	${OpenInfraPlatform_Infrastructure_CrossSection_Source}
 	${OpenInfraPlatform_Infrastructure_DigitalElevationModel_Source}
+	${OpenInfraPlatform_Infrastructure_ProxyModel_Source}
 	${OpenInfraPlatform_Infrastructure_SectionedSolid_Source}
 	${OpenInfraPlatform_Infrastructure_Girder_Source}
 	${OpenInfraPlatform_Infrastructure_SlabField_Source}
