--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -501,6 +501,7 @@ set(OpenInfraPlatform_UIS
 	src/OpenInfraPlatform/Forms/VerticalAlignmentWindow.ui
 	src/OpenInfraPlatform/Forms/XYZImportDialog.ui
 	src/OpenInfraPlatform/Forms/LicenseAndCopyrightInformation.ui
+	src/OpenInfraPlatform/Forms/CreateCarAccidentReport.ui
 )
 
 source_group(OpenInfraPlatform\\UserInterface\\Forms					FILES ${OpenInfraPlatform_UIS})
