--- a/UnitTests/src/OpenInfraPlatform/UnitTests/Infrastructure/HorizontalAlignmentElement2DArc/CMakeLists.txt
+++ b/UnitTests/src/OpenInfraPlatform/UnitTests/Infrastructure/HorizontalAlignmentElement2DArc/CMakeLists.txt
@@ -15,7 +15,7 @@
 #    along with this program. If not, see <http://www.gnu.org/licenses/>.
 #
 
-file(GLOB OpenInfraPlatform_UnitTests_Infrastructure_HorizontalAlignmentElement2DArc	*.*)
+file(GLOB OpenInfraPlatform_UnitTests_Infrastructure_HorizontalAlignmentElement2DArc	*.cpp)
 
 source_group(OpenInfraPlatform\\UnitTests\\Infrastructure 	FILES ${OpenInfraPlatform_UnitTests_Infrastructure_HorizontalAlignmentElement2DArc})
 source_group(OpenInfraPlatform\\UnitTests       			FILES ${OpenInfraPlatform_UnitTests_Source})
