--- a/IfcBridgeGenerator/CMakeLists.txt
+++ b/IfcBridgeGenerator/CMakeLists.txt
@@ -34,24 +34,14 @@ if(OIP_USE_PREBUILD_EARLYBINDING_LIBS)
 		${OpenInfraPlatform_IfcBridge_LIBRARY}
 		Rpcrt4.lib
 		# BlueFramework
-		${BLUEFRAMEWORK_BLUECORE_LIBRARY}
-		${BLUEFRAMEWORK_BLUEIMAGEPROCESSING_LIBRARY}
-		${BLUEFRAMEWORK_BLUERASTERIZER_LIBRARY}
-		${BLUEFRAMEWORK_BLUEGRAPHICSENGINE_LIBRARY}
-		${BLUEFRAMEWORK_BLUEGL4XRENDERER_LIBRARY}
-		${BLUEFRAMEWORK_BLUEAPPLICATION_LIBRARY}
+		${BLUEFRAMEWORK_LIBRARIES}
 	)
 else()
 	target_link_libraries(OpenInfraPlatform.IfcBridgeGenerator
 		Qt5::WinMain
 		OpenInfraPlatform.IfcBridge
 		# BlueFramework
-		${BLUEFRAMEWORK_BLUECORE_LIBRARY}
-		${BLUEFRAMEWORK_BLUEIMAGEPROCESSING_LIBRARY}
-		${BLUEFRAMEWORK_BLUERASTERIZER_LIBRARY}
-		${BLUEFRAMEWORK_BLUEENGINE_LIBRARY}
-		${BLUEFRAMEWORK_BLUEGL4XRENDERER_LIBRARY}
-		${BLUEFRAMEWORK_BLUEAPPLICATION_LIBRARY}	
+		${BLUEFRAMEWORK_LIBRARIES}
 	)
 endif()
 install(TARGETS OpenInfraPlatform.IfcBridgeGenerator   
