Improved CarCrash texture and fixed DirectX11 error at startup.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -572,33 +572,31 @@ macro(add_thirdparty TGT)
 endmacro()
 
 # Thirdparty
-if (WIN32)
 	add_thirdparty(QtXlsxWriter 	"REQUIRED")
 	add_thirdparty(QSimpleUpdater 	"REQUIRED")
 		
-	# carve
-	add_thirdparty(carve					"carve")
-	add_thirdparty(carve_fileformats		"carve")
-	add_thirdparty(carve_misc				"carve")
-	add_thirdparty(close_manifold			"carve")
-	add_thirdparty(cutgraph					"carve")
-	add_thirdparty(convert					"carve")
-	add_thirdparty(extrude					"carve")
-	add_thirdparty(face_merge				"carve")
-	add_thirdparty(gloop_model				"carve")
-	add_thirdparty(gloop_image				"carve")
-	add_thirdparty(gloop_math				"carve")
-	add_thirdparty(intersect				"carve")
-	add_thirdparty(slice					"carve")		
-	add_thirdparty(tetrahedron				"carve")
-	add_thirdparty(triangulate				"carve")
-	add_thirdparty(test_eigen				"carve")
-	add_thirdparty(test_aabb				"carve")
-	add_thirdparty(test_geom				"carve")
-	add_thirdparty(test_rescale				"carve")
-	add_thirdparty(test_spacetree			"carve")
-	add_thirdparty(test_carve_polyhedrons_2	"carve")
-endif (WIN32)
+# carve
+add_thirdparty(carve					"carve")
+add_thirdparty(carve_fileformats		"carve")
+add_thirdparty(carve_misc				"carve")
+add_thirdparty(close_manifold			"carve")
+add_thirdparty(cutgraph					"carve")
+add_thirdparty(convert					"carve")
+add_thirdparty(extrude					"carve")
+add_thirdparty(face_merge				"carve")
+add_thirdparty(gloop_model				"carve")
+add_thirdparty(gloop_image				"carve")
+add_thirdparty(gloop_math				"carve")
+add_thirdparty(intersect				"carve")
+add_thirdparty(slice					"carve")		
+add_thirdparty(tetrahedron				"carve")
+add_thirdparty(triangulate				"carve")
+add_thirdparty(test_eigen				"carve")
+add_thirdparty(test_aabb				"carve")
+add_thirdparty(test_geom				"carve")
+add_thirdparty(test_rescale				"carve")
+add_thirdparty(test_spacetree			"carve")
+add_thirdparty(test_carve_polyhedrons_2	"carve")
 
 #-------------------------------------------------------------------------------------
 # Set the target properties.
@@ -612,7 +610,6 @@ set_target_properties(Qt5CopyBinaries			 				PROPERTIES FOLDER "Copy")
 set_target_properties(QSimpleUpdaterCopyBinaries				PROPERTIES FOLDER "Copy")
 set_target_properties(GTestCopyBinaries							PROPERTIES FOLDER "Copy")
 set_target_properties(libLASCopyBinaries						PROPERTIES FOLDER "Copy")
-set_target_properties(carve 									PROPERTIES FOLDER "ThirdParty/carve")
 set_target_properties(OpenInfraPlatform.ExpressBinding		 	PROPERTIES FOLDER "OpenInfraPlatform/EarlyBinding")
 #set_target_properties(OpenInfraPlatform.EXPRESS2Source		 	PROPERTIES FOLDER "OpenInfraPlatform/EarlyBinding")
 
@@ -628,7 +625,7 @@ set_target_properties(OpenInfraPlatform.UI					 PROPERTIES FOLDER "OpenInfraPlat
 # Deployment & Installation.
 #-------------------------------------------------------------------------------------
 
-set(CPACK_GENERATOR WIX ZIP)
+set(CPACK_GENERATOR WIX)
 set(CPACK_WIX_UPGRADE_GUID "178111DC-0B0C-4E3F-8C80-D756F742645F")
 set(CPACK_WIX_PRODUCT_GUID "D936BC02-9157-4D86-9652-F8CB6D62BAAE")
 set(CPACK_PACKAGE_NAME "${PROJECT_NAME}")
